[gd_scene load_steps=5 format=3 uid="uid://bng2d6jqd3006"]

[ext_resource type="StyleBox" uid="uid://drw8la0oiayp8" path="res://addons/anthonyec.timeline/clip_normal_box_style.tres" id="1_cafq6"]
[ext_resource type="Script" path="res://addons/anthonyec.timeline/clip.gd" id="1_x8tcc"]
[ext_resource type="Script" path="res://addons/anthonyec.timeline/clip_handle.gd" id="2_lfdtc"]
[ext_resource type="StyleBox" uid="uid://3app0tlob745" path="res://addons/anthonyec.timeline/clip_focused_box_style.tres" id="2_y1y6c"]

[node name="Clip" type="Button"]
custom_minimum_size = Vector2(8, 40)
anchors_preset = -1
anchor_bottom = 0.13
offset_right = 500.0
offset_bottom = -4.24001
grow_vertical = 2
theme_override_styles/normal = ExtResource("1_cafq6")
theme_override_styles/hover = ExtResource("2_y1y6c")
theme_override_styles/pressed = ExtResource("2_y1y6c")
theme_override_styles/focus = ExtResource("2_y1y6c")
script = ExtResource("1_x8tcc")

[node name="Label" type="Label" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 12.0
offset_top = -11.0
offset_right = -11.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "Name"
clip_text = true
text_overrun_behavior = 3

[node name="LeftHandle" type="Button" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 8.0
offset_bottom = 1.52588e-05
grow_vertical = 2
flat = true
script = ExtResource("2_lfdtc")

[node name="RightHandle" type="Button" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -9.0
offset_right = -1.0
offset_bottom = 1.52588e-05
grow_horizontal = 0
grow_vertical = 2
flat = true
script = ExtResource("2_lfdtc")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="button_down" from="LeftHandle" to="." method="_on_left_handle_button_down"]
[connection signal="button_up" from="LeftHandle" to="." method="_on_left_handle_button_up"]
[connection signal="mouse_entered" from="LeftHandle" to="LeftHandle" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LeftHandle" to="LeftHandle" method="_on_mouse_exited"]
[connection signal="button_down" from="RightHandle" to="." method="_on_right_handle_button_down"]
[connection signal="button_up" from="RightHandle" to="." method="_on_right_handle_button_up"]
[connection signal="mouse_entered" from="RightHandle" to="RightHandle" method="_on_mouse_entered"]
